Fixed first sidebar z-index so it isn't above fade in overlay.

--- a/stylesheets/layout/_z-index.scss
+++ b/stylesheets/layout/_z-index.scss
@@ -58,5 +58,5 @@ main[role="main"]:not(.header-has-overlay)::before,
 }
 
 .layout-sidebar-first {
-  @include z-index.get('floating-above');
+  @include z-index.get('floating');
 }
